Set album Thumbnails max-width to avoid horizontal scroll

--- a/zgallery-frontend/src/css/Thumbnail.css
+++ b/zgallery-frontend/src/css/Thumbnail.css
@@ -25,6 +25,7 @@
     filter: grayscale(50%);
     position: relative;
     display: inline-block;
+    max-width: 100%;
 }
 
 .visible:hover {
